Updated the code and experience and overall application

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,8 @@
     </script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.15.4/css/all.min.css">
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
+
 
 
     <!--
